--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
+    id("org.jetbrains.kotlin.plugin.serialization") version "1.7.20"
 }
 
 android {
